<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="mta">OSMECON MedQuiz is the biggest and most sought-after quiz of it’s kind in India!\n\nHow many of us find the hours of reading the drab books filled to the brim with stuff we have to remember…umm, boring? To jump to interesting and the very interesting bits, wait no longer for here is this quiz which brings it all to you. If you thought information could never be entertainment, you haven’t seen the OSMECON MedQuiz!\n\nKnowing your Gray’s and Guyton’s, Harrison’s and Robbin’s, Parsons’ and Park (!) cover to cover will not be enough. In fact, all that is not even needed. Come with a healthy 1.5 gooey chunk in your head, and an all-round awareness of the world of medicine. Finalist or not, we bet you’ll go home loving medicine more than before. Follow our Facebook page for questions from previous editions.\n\nThe earlier editions drew an amazing feedback for the quality of questions and the quizzing. This year’s edition promises to be better, bigger, tougher and more competitive. First years have beaten final years before, yes! – the smartest ones, not necessarily the nerdiest, walk away with a very handsome prize. An overload of prizes for all finalists as well. You just can’t miss the quiz!</string>
    <string name="app_name">OSMECON 2014</string>
    <string name="title">title</string>
    <string name="link">link</string>
    <string name="description">Description</string>
    <string name="fetch">Fetch Feed</string>
    <string name="about_event">About the Event</string>
    <string name="about_content_event">OSMECON is a pan India Undergraduate Medical Conference conducted annually by Osmania Medical College and its associate hospitals Designed as a special platform presented by Osmania Medical College to promote undergraduate talent, it instils scientific reasoning and reinforces the value of medical research. Started in 2010 to share medical research done by undergraduates, OSMECON has grown to a special event to showcase, learn, share and gain knowledge. OSMECON has leaped from humble beginnings to involving over 500 young medicos last year This year it’s only set to get bigger and better!</string>
    <string name="about_collage">\n\nAbout the College</string>
    <string name="content_collage">Osmania Medical College originally Hyderabad Medical College is a medical college in Hyderabad and is often ranked among the best medical colleges in the nation. It is listed among the Avicenna directory of medical schools and the FAIMER IMED directory It was founded in 1846 as the Hyderabad Medical School making it one of the oldest medical schools in the world.It is presently affiliated to the NTR University of Health Sciences. It has more than 10 teaching hospitals and several outreach hospitals affiliated to it and has a high reputation as a centre of clinical excellence. Osmania Medical College has long been a government institution in Andhra Pradesh. It is the oldest medical school in India and perhaps Asia. The concept of Osmania Medical College dates back to 1595 AD, then called as Dar-Ul-Shifa in Hyderabad, making it the oldest medical school. \nOsmania has a rich history of pioneering medical innovations For the first time, chloroform was used as an anaesthetic in Osmania. The causative agent of malaria was elucidated here by Sir Ronald Ross who has been immortalised by the Sir Ronald Ross Institute of Tropical and Communicable Diseases affiliated to Osmania Medical College. Osmania is the only medical college in India where each medical specialty has a separate training hospital which comes to an overall bed count of over 6000 beds. \nThe following hospitals fulfil the role of teaching hospitals for Osmania Medical College.\n\n1. Osmania General Hospital\n2. Government Maternity Hospital\n3. Niloufer Hospital\n4. Sir Ronald Ross Institute of Tropical and Communicable Diseases\n5. Modern Government Maternity Hospital, Petlaburz\n6. Mehdi Nawaz Jung Institute of Oncology\n7. Sarojini Devi Eye Hospital\n8. Government ENT Hospital\n9. The Institute of Mental Health\n10. Government Chest Hospital\n11. Rural Health Centre Patancheru – Osmania is one of the only two medical colleges in India with a rural health centre attached to it.\n</string>
    <string name="about_team">About the Team\n </string>
    <string name="ha">Organising Secretaries</string>
    <string name="hac">Aarti Singh\nV. Saketh Reddy\n\n</string>
    <string name="hb">\nJoint Orgainising Secretaries</string>
    <string name="hbc">Abhishek Sahu\nKrishna Chakra\nKhyati Kiran\nMadhuri Challa\n\n</string>
    <string name="hb1">Student Co-ordinator</string>
    <string name="hbc1">Vijaya Chelikani\n\n</string>
    <string name="hb2">Student Treasurers</string>
    <string name="hbc2">Sania Jiwani\nShagufta Tarannum\n\n</string>
    <string name="hc">\nTech</string>
    <string name="hcc">Abdul Kareem - Web and Graphics\nSatya Revanth - Video\n\n</string>
    <string name="ahc">\nAndroid</string>
    <string name="ahcc">Avinash kumar\n Sweta gupta\n\n</string>
    <string name="hd">\nContent Developer</string>
    <string name="hdc">Dushyant Ramakrishnan\nSyed Mustafa Hashmi\n\n</string>
    <string name="he">\nSponshorship</string>
    <string name="hec">Sana Hyder\nSamatha Toopran\nPooja Kalantri\nG. Sri Vibhavari\nRahul Myadam\n\n</string>
    <string name="hg">Team Osmecon 2014 </string>
    <string name="register_content">Coming Soon</string>
    <string name="contact">Contact</string>
    <string name="home_poem"> \n\"In trifling show his tinsel talent lies,\nAnd form the want of intellects supplies,\nIn aspect grand and goodly he appears,\nRever’d as patriarchs in primaeval years.\nHourly his learn’d impertinence affords\nA barren superfluity of words,\nThe patient’s ears remorselessly he assails,\nMurders with jargon where his med’cine fails.”\n</string>
    <string name="home_welcome"> Welcome to\nOSMECON-2014!\n</string>
    <string name="home_note">Still apt are these lines by Sir Samuel Garth (1661 – 1719), English physician and poet, revealing the obvious shortcomings of medical knowledge and those seeking to use it. Despite there being several areas beyond our understanding, we can still valiantly, albeit naively, try and catch up with the unknown rather than letting it get too far ahead.\n\nSearching and researching the annals of medicine and learning by experience with a touch of imaginative brilliance alongside can go a long way in unraveling the medical mysteries.\n\nWhat better way to do it than with fellow students and future professionals in one of the more well-known medical institutes in the country!\n</string>
    <string name="home_copyright"> \n© COPYRIGHT 2014 | OSMANIA MEDICAL COLLEGE, HYDERABAD. </string>
    <string name="call">Call Us</string>
    <string name="help">Help-desk</string>
    <string name="help_no">Call Us\nMounish (0)888-542-0889\nSameer	(0)789-389-0154\nSireesha (0)814-346-7288\nAyesha	(0)810-606-3024\n</string>
    <string name="jss"> Joint Organising Secretaries</string>
    <string name="jss_no">Abhishek (0)800-850-4212\nKrishna Chakra (0)949-396-3440\nKhyati (0)998-907-8865\nMadhuri (0)990-850-7074\n</string>
    <string name="oss">Organising Secretaries</string>
    <string name="oss_no">Saketh (0)720-783-1402\nAarti (0)814-297-7743</string>
    <string name="find">\nFind Us</string>
    <string name="find_us">Room No.: 140,\nOsmecon Secretariat,\nOsmania Medical College,\nTurrebaz Khan Road,\nKoti,\nHyderabad- 500001 \n</string>
    <string name="reach">Reaching Osmania Medical College</string>
    <string name="train">Train</string>
    <string name="by_train">The closest train station is at Hyderabad Deccan-HYB (Nampally) which is 2 kilometres away. It is considered the best to board or arrive from out state destination trains in Hyderabad. Other important railway stations in Hyderabad include Secunderabad/ Kachiguda/Begumpet Railway stations.</string>
    <string name="flight">Flight</string>
    <string name="by_flight"> Rajiv Gandhi International Airport (ranked among the top airports of the world ) is located 23 kilometres away from Osmania Medical College Car rental and Taxi services are available at the airport.</string>
    <string name="bus">Bus</string>
    <string name="mtb">1. Each team can have up to 2 members.\n\n2. There is no restriction on team composition. You can team up with any UG student of any college of any year i.e cross college teams are allowed.\n\n3. There will first be a prelims for all the participating teams from which 8 teams will move on to the finals.\n\n4. The quiz will have big cash prizes for the top 3 places and also all finalists. So don’t think much, just participate!\n\n5. For any queries, contact +91 9848608706</string>
    <string name="by_bus">Mahatma Gandhi Bus Station (the largest in Asia) located close to Koti is a major bus station, and it is a road transport gateway to the city. This bus station provides transport to all parts of the state and country. The local city Bus terminus is located adjacent to the Mahatma Bus station, providing connectivity to all parts of the city.</string>
    <string name="fb">On Facebook</string>
    <string name="fbl">http://facebook.com/osmeconosmania</string>
    <string name="a1">This is an amazing platform for young researchers to showcase their research. Research done by undergraduates in any medical field is accepted. The abstracts would be reviewed by specific panels and short-listed for presentation.</string>
    <string name="a3">Guidelines</string>
    <string name="wa">\nEvents</string>
    <string name="wb">Sai Yasaswini\nRahul Myadam\nManojna Musunuri\nE. Soumya\nSumasri C.\nVarsha Vempati\nShravya V.\nNanditha G\nD. Shweta\nHarika K.\nK. Gayathri\nAshwini Gotimukul\nPooja Kalantri\nG. Sri Vibhavari\nShagufta Tarannum\n\n</string>
    <string name="wc">\nCreative</string>
    <string name="wd">Dushyant Ramakrishnan\nChandu Revathi\nB. Reshma\nVyshnavi J.\nAashika B.\nNeelam Harsha\nE. Katyayini\nK. Deepthi\nMadhuri Priyanka\nD. Sweta\nAbdul Kareem\n\n</string>
    <string name="we">\nPublic Relations</string>
    <string name="wf">Mounish Muddapuram\nJuveria Fatima\nMaryam Afifa\nAyesha Samreen\nSabeena Eliyas\nSireesha Chamarthi\nZahra Abdul Rasheed\nSameerhanu Maharshi\n\n</string>
    <string name="wg">\nHospitality</string>
    <string name="wh">Krishna Chakra\nManoj Kumar\nSukrit P.\nAashika B.\n\n</string>
    <string name="wi">\nPublicity</string>
    <string name="wj">Bhavya Reddy\nLalitha R.\nSarvani Surapaneni\nSP Krupani\n\n</string>
    <string name="wk">\nFaculty</string>
    <string name="wl">Chairperson\nDr. M. Ramani\nPrincipal\n\nAdvisory Board\nDr. Pari Plavi\nProfessor And HOD\nDept. Of Anatomy\n\nDr. Rakesh Sahay\nProfessor\nDept. Of Endocrinology\n\nPatrons\nDr. Gopalakishan\nDr. Krishna Reddy\nDr. Y. Ravinder Rao\n(OMC Alumni Association)\n\nStaff Treasurer\nDr. T. Nava Kalyani\nAssociate Professor\nDept. Of Anatomy</string>
</resources>